syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.common.connect.model.proto";
option java_outer_classname = "BaseMessage";
import "Account.proto";
import "Message.proto";
import "Notification.proto";


message BaseMessagePkg {

//https://protobuf.dev/programming-guides/proto3/#oneof
  oneof payload {

    AccountInfo accountInfo = 1;

    ChatMessage message = 2;

    NotificationInfo notification = 3;

  }

}